--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,8 @@
     </div>
 
     <div class="container">
-    <div ng-include="'views/main.html'" ng-controller="MainCtrl"></div>
+      <div ng-include="'views/main.html'" ng-controller="MainCtrl">
+      </div>
     </div>
 
     <div class="footer">
