--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/parse.service.js"></script>
-        <script src="http://www.parsecdn.com/js/parse-1.2.13.min.js"></script>
+        <script src="scripts/services/parse.js"></script>     
         <!-- endbuild -->
 </body>
 </html>
