--- a/app/index.html
+++ b/app/index.html
@@ -39,9 +39,8 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li class="active"><a href="https://github.com/nghiattran/angular-parse/blob/gh-pages/README.md#get-started">Getting started</a></li>
+              <li><a href="https://github.com/nghiattran/angular-parse/blob/gh-pages/README.md#requests">Requests</a></li>
             </ul>
           </div>
         </div>
@@ -55,7 +54,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> <strong>Credits:</strong> <a href="https://angularjs.org/">AngularJs</a>, <a href="https://parse.com">Parse</a>, and <a href="http://yeoman.io/">Yeoman</a></p>
       </div>
     </div>
 
