--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
        // }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
        // ga('create', 'UA-XXXXX-X');
-       // ga('send', 'pageview');</script> <script src="scripts/vendor.96b44e73.js"></script> <script src="scripts/scripts.76fadce6.js"></script> </body> </html>
+       // ga('send', 'pageview');</script> <script type="text/javascript" src="bower_components/ace-builds/src-min-noconflict/ace.js"></script> <script src="scripts/vendor.bcc8a140.js"></script> <script src="scripts/scripts.6ddd4d32.js"></script> </body> </html>
