--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
        // ga('create', 'UA-XXXXX-X');
        // ga('send', 'pageview');
     </script>
-
+    <script type="text/javascript" src="bower_components/ace-builds/src-min-noconflict/ace.js"></script>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -80,12 +80,11 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-ui-ace/ui-ace.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script type="text/javascript" src="bower_components/ace-builds/src-min-noconflict/ace.js"></script>
-        <script type="text/javascript" src="bower_components/angular-ui-ace/ui-ace.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/test.js"></script>
